fix(DropdownMenu): :bug: Add missing background
fixes #1251

--- a/packages/react/src/components/DropdownMenu/DropdownMenu.module.css
+++ b/packages/react/src/components/DropdownMenu/DropdownMenu.module.css
@@ -6,6 +6,7 @@
   list-style: none;
   border-radius: var(--fds-border_radius-medium);
   box-shadow: var(--fds-shadow-medium);
+  background-color: var(--fds-semantic-background-default);
 }
 
 .dropdown.small {
